# truenas-rs

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  conn.rs  lib.rs  messaging.rs  protocol.rs
crates/client/src/ddp/: messaging.rs  protocol.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  types.rs
crates/io/: Cargo.toml
crates/jsonrpc/: Cargo.toml  TODO.md
crates/jsonrpc/src/: client.rs  error.rs  lib.rs  protocol.rs
crates/jsonrpc/src/state/: messaging.rs  mod.rs  protocol.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs  protocol.rs  types.rs
crates/testing/: Cargo.toml
truenas/: Cargo.toml
truenas-cli/: Cargo.toml
truenas-cli/src/: main.rs
truenas/src/: client.rs  error.rs  io.rs  lib.rs  protocol.rs  state.rs  types.rs
truenas/src/transport/: mod.rs  ws.rs
