[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2" }
futures = { version = "0" }
uuid = { version = "1", features = ["v4"] }
futures-util = { version = "0" }
