[workspace]
members = ["truenas", "truenas-cli"]
resolver = "3"

[workspace.package]
name = "truenas-rs"
version = "0.0.1"
edition = "2024"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", features = ["raw_value"] }
tokio = { version = "1", features = ["full"] }
thiserror = { version = "2" }
futures = { version = "0" }
uuid = { version = "1", features = ["v4"] }
futures-util = { version = "0" }
bytes = { version = "1", features = ["serde"] }
tokio-util = { version = "0.7.16", features = ["time"] }
tokio-tungstenite = { version = "0.28.0", features = [
    "connect",
    "handshake",
    "stream",
    "rustls-tls-native-roots",
] }
slab = { version = "0.4.11" }
