[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
truenas = { path = "../truenas" }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
