[package]
name = "truenas"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { version = "0.27.0", features = [
    "connect",
    "handshake",
    "stream",
    "rustls-tls-native-roots",
] }
