[package]
name = "truenas"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
slab = { workspace = true }
